<resources>
    <string name="app_name">Admin</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_products">Products</string>
    <string name="title_vendors">Vendors</string>
    <string name="title_reports">Reports</string>
    <string name="title_settings">Settings</string>
    <string name="title_profile">Profile</string>
    <string name="title_update_profile">Update Profile</string>
    <string name="title_new_vendor">New Vendor</string>
    <string name="title_new_product">New Product</string>
    <string name="title_shop_products">Shop Products</string>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <!-- Change the following strings as required -->
    <string name="back4app_app_id">LjkAcuOp77oeCS1hJFmLhSQUb1DYAo5Wqi8S9EW4</string>
    <string name="back4app_client_key">vjDVMH1ZFT3rcQjtFRbgAp7bGpozd8kSKsUSKJH9</string>


    <string-array name="Options">
        <item>Edit</item>
        <item>Delete</item>
    </string-array>

</resources>
